[gd_scene load_steps=9 format=3 uid="uid://bk6xv2kw3te46"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3ncpe"]
[ext_resource type="Theme" uid="uid://dqmu52ht0y2m8" path="res://assets/ui_n_backgrounds/gui.tres" id="1_n5q1a"]
[ext_resource type="Texture2D" uid="uid://d336ivumlkn81" path="res://assets/ui_n_backgrounds/desert.jpeg" id="3_oey2r"]
[ext_resource type="FontFile" uid="uid://c53kogtyjwsss" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_fhkp6"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="5_roy2c"]

[sub_resource type="Animation" id="Animation_awqar"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ipq1x"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36yby"]
_data = {
"RESET": SubResource("Animation_awqar"),
"fade_out": SubResource("Animation_ipq1x")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ncpe")

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
libraries = {
"": SubResource("AnimationLibrary_36yby")
}

[node name="Start" type="Button" parent="TransitionLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -76.0
offset_right = 134.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n5q1a")
text = "Start Game"

[node name="Quit" type="Button" parent="TransitionLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 35.0
offset_right = 134.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n5q1a")
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.364706)
z_index = -3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -252.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_oey2r")
expand_mode = 4
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_top = 117.0
offset_right = 134.0
offset_bottom = 176.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_fhkp6")
theme_override_font_sizes/font_size = 58
text = "Rimal"

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -439.0
offset_top = 590.0
offset_right = 439.0
offset_bottom = 649.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("5_roy2c")
theme_override_font_sizes/font_size = 26
text = "by Maryam Alabbar, Arthur Diniz and Ery Castro"
horizontal_alignment = 1

[connection signal="pressed" from="TransitionLayer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TransitionLayer/Quit" to="." method="_on_quit_pressed"]
